--- a/scss/chat/_chat.scss
+++ b/scss/chat/_chat.scss
@@ -1,50 +1,207 @@
+& {
+  row-gap: 0px;
+  overflow: visible;
+  // background: linear-gradient(to left, var(--blades-black) 0%, transparent 100%);
+
+  #chat-log
+  {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar { display: none; }
+
+    width: 125%;
+    margin-left: -25%;
+    padding-left: 25%;
+
+  }
+
+
+  .flexrow.jump-to-bottom {
+    bottom: 154px;
+    z-index: 5;
+  }
+
+  #chat-controls, #chat-form {
+    background: var(--blades-black);
+    opacity: 1;
+    position: relative;
+    place-self: stretch flex-end;
+    z-index: 1;
+  }
+}
+
+
 .chat-message {
+  --chat-header-height: 20px;
+  --chat-vertical-gap: 50px;
+  --resistance-right-shift: 60px;
+
+  --speaker-portrait-height: 100px;
+
   --bg-controlled: var(--blades-grey-bright);
   --bg-risky: var(--blades-black-dark);
   --bg-desperate: var(--blades-red-darkest);
+
+  --bg-critical: transparent;
+  --bg-success: transparent;
+  --bg-partial: transparent;
+  --bg-fail: transparent;
 }
 
 .chat-message:last-child {
   --bg-controlled: url("../assets/animations/chat/roll-position-controlled.webp");
   --bg-risky: url("../assets/animations/chat/roll-position-risky.webp");
   --bg-desperate: url("../assets/animations/chat/roll-position-desperate.webp");
+
+  // --bg-critical: transparent;
+  // --bg-success: transparent;
+  // --bg-partial: transparent;
+  --bg-fail: url("../assets/animations/chat/fail-bg.webp");
+
+  margin-bottom: 0px;
 }
 
 
 .chat-message {
-  background: var(--blades-black-dark);
-  overflow: hidden;
+  background: transparent;
+  overflow: visible;
+  border: none;
+  padding: 0;
+  margin: var(--chat-vertical-gap) 0px;
+
   position: relative;
 
 
   .message-header {
     position: relative;
-    z-index: 1;
+    z-index: 3;
+    height: var(--chat-header-height);
+    top: 4px;
 
     .message-sender {
-      color: var(--blades-grey);
+      color: var(--blades-white-bright);
+      text-indent: 15px;
+      // margin-top: -16px;
+      text-shadow: var(--text-shadow-dark-strong);
+      line-height: calc(0.75 * var(--chat-header-height));
+      font-size: calc(0.75 * var(--chat-header-height));
     }
+  }
+
+  .chat-message-speaker-portrait-wrapper {
+    $border-color-bright: #9e7f46; // #aa5a29;
+    $border-color-med: #6b5630; // #5a2f17;
+    $border-color-dark: #46381f; // #531c06;
+    $border-color-darkest: #2c2315; // #3b1201; // 46381f 6b5630 9e7f46
+
+    $border-gradient: linear-gradient(-72deg,
+      #{$border-color-med},
+      #{$border-color-bright} 16%,
+      #{$border-color-med} 21%,
+      #{$border-color-bright} 24%,
+      #{$border-color-dark} 27%,
+      #{$border-color-med} 36%,
+      #{$border-color-bright} 45%,
+      #{$border-color-bright} 60%,
+      #{$border-color-med} 72%,
+      #{$border-color-bright} 80%,
+      #{$border-color-med} 84%,
+      #{$border-color-darkest});
+
+    height: var(--speaker-portrait-height);
+    width: calc(var(--speaker-portrait-height));
+    position: absolute;
+    left: -5px;
+    top: 20px;
+    transform: translate(-50%, -50%);
+
+    border-radius: calc(0.5 * var(--speaker-portrait-height));
+    scale: 0.8 1;
+    transform-origin: 50% 50%;
+
+    background: $border-gradient;
+    background-repeat: no-repeat;
+    outline: 3px solid black;
+    box-shadow: 0 0 5px 5px black;
+
+    .chat-message-speaker-portrait {
+      // outline: 2px solid magenta;
+      height: 100%;
+      width: 100%;
+      box-shadow: inset 0px 0px 5px var(--blades-black-dark), inset 0px 0px 5px var(--blades-black-dark), inset 0px 0px 5px var(--blades-black-dark);
+      overflow: hidden;
+      border-radius: calc(0.5 * var(--speaker-portrait-height));
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      scale: 0.9 0.9;
+
+
+      .portrait-image {
+        height: 100%;
+        transform-origin: 50% 50%;
+        scale: calc(1.5/0.8) 1.5;
+        // opacity: 0.5;
+        // outline: 1px solid yellow;
+      }
+
+
+      .chat-message-speaker-portrait-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: calc(0.5 * var(--speaker-portrait-height));
+        box-shadow: inset 0px 0px 10px 5px var(--blades-black-dark);
+
+      }
+    }
+  }
+
+
+  &.resistance-roll {
+    margin: 0;
+    .message-header { display: none; }
+  }
+  &.action-roll + .chat-message.resistance-roll {
+    margin-top: calc(-1 * var(--chat-vertical-gap));
   }
 
   .message-content {
 
-    .chat-message-bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      z-index: 0;
-
-      &.roll-position-risky {
-        background: var(--bg-risky);
-        background-size: cover;
-      }
-    }
-
     .blades-roll {
       position: relative;
       z-index: 2;
+
+      .chat-message-bg {
+        position: absolute;
+        top: -5px;
+        left: 0;
+        height: calc(100% + 5px);
+        width: 100%;
+        z-index: -1;
+        border-bottom-left-radius: 30px;
+
+        &.roll-position-risky {
+          background: var(--bg-risky);
+          background-size: cover;
+        }
+      }
+
+      .chat-result-bg {
+        position: absolute;
+        top: unset;
+        left: 0;
+        width: 100%;
+        z-index: 0;
+        bottom: 0;
+
+        &.roll-result-fail {
+          background: var(--bg-fail);
+          background-size: cover;
+        }
+      }
 
       .chat-header {
         margin: 0;
@@ -61,48 +218,75 @@
         background: transparent;
         box-shadow: none;
         font-size: 32px;
-        color: var(--blades-gold);
+        line-height: 32px;
+        color: var(--blades-gold-bright);
       }
 
       .dice-roll-strip {
+        --die-size: 30px;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        height: 30px;
-        width: 100%;
+        height: calc(var(--die-size) + 2 * 4px);
+        width: 150%;
+        margin-left: 25%;
         align-items: stretch;
         justify-content: center;
-        gap: 10px;
+        gap: calc(var(--die-size) * 0.3);
         margin: 5px 0;
+        padding: 4px 50% 4px 0;
+        background: var(--blades-grey-dark);
+        box-shadow: inset 0px 0px 10px 5px var(--blades-black-dark);
 
         .blades-die {
           display: block;
-          height: 30px;
+          height: var(--die-size);
+          transform-origin: 50% 50%;
+          overflow: hidden;
+          border-radius: calc(0.2 * var(--die-size));
 
           img {
-            height: 30px;
-            width: 30px;
+            height: var(--die-size);
+            width: var(--die-size);
             display: block;
           }
 
           &.blades-die-critical {
-            outline: 2px solid var(--blades-gold-bright);
-
+            box-shadow: 0px 0px 5px 3px var(--blades-gold-bright);
+            scale: 1.25;
+            z-index: 1;
+          }
+          &.blades-die-critical:first-child + .blades-die-critical {
+            // margin-left: calc(-0.05 * var(--die-size));
+            margin-left: 3px;
+            box-shadow: 0px 0px 5px 3px var(--blades-gold-bright);
+            // z-index: 0;
+            // scale: 1.35;
           }
           &.blades-die-success {
-            outline: 2px solid var(--blades-white-bright);
+            filter: drop-shadow(0px 0px calc(var(--die-size) * 0.1) var(--blades-white-bright));
+            scale: 1.25;
           }
-          // &.blades-die-partial {
 
-          // }
-          // &.blades-die-fail {
-
-          // }
+          &.blades-die-partial:first-child {
+            box-shadow: 0px 0px 5px var(--blades-white);
+          }
           &.blades-die-ghost {
-            img { opacity: 0.5 }
+            // opacity: 0.25;
+            // filter: blur(2px) sepia(1) saturate(2) brightness(0.35) hue-rotate(319deg);
+            box-shadow: 0px 0px 5px 1px var(--blades-red);
+            // scale: 0.8;
+            rotate: 10deg;
+            opacity: 0.8;
+            filter: brightness(0.35);
+
+            img {
+              filter: blur(2px) sepia(1) saturate(2) hue-rotate(319deg);
+            }
           }
           &.blades-die-resistance {
-            outline: 2px solid var(--blades-blue-bright);
+            filter: drop-shadow(0px 0px calc(var(--die-size) * 0.1) var(--blades-blue-bright));
+            scale: 1.25;
           }
         }
       }
@@ -190,6 +374,158 @@
       .consequence-container {
         margin-top: 10px;
       }
+
+
+
+      &.roll-type-resistance {
+        width: calc(100% - var(--resistance-right-shift));
+        left: var(--resistance-right-shift);
+        top: 0;
+
+        .chat-message-bg {
+          background: var(--blades-grey);
+          top: 0; // calc(-1 * (var(--chat-header-height) + var(--chat-vertical-gap)));
+          height: 100%; // calc(100% + var(--chat-header-height) + var(--chat-vertical-gap));
+          left: -15px;
+          border-top-left-radius: 16px;
+          border-bottom-left-radius: 16px;
+          width: calc(100% + var(--resistance-right-shift));
+        }
+
+        .resistance-roll-one-line {
+          position: relative;
+          justify-content: stretch;
+
+          .resistance-roll-intro {
+            color: var(--blades-gold-bright);
+            // transform: translate(-50%, -50%);
+            // top: 50%;
+            z-index: 3;
+            left: calc(-1 * var(--resistance-right-shift));
+            position: absolute;
+            rotate: -45deg;
+            transform-origin: 50% 50%;
+            transform: translate(0%, 0%);
+            left: calc(-1 * var(--resistance-right-shift) - 0px);
+            left: -19px;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 10px;
+            text-shadow: var(--text-shadow-dark-strong);
+            top: 7px;
+          }
+
+          .consequence-icon-img {
+            height: 32px;
+            border-radius: 16px;
+            background: var(--blades-black);
+            position: absolute;
+            // left: calc(-1 * var(--resistance-right-shift) + 10px);
+            left: -10px;
+          }
+
+          .resistance-roll-vertical-right {
+            align-items: space-evenly;
+
+            .resistance-roll-attr-dice {
+              height: 24px;
+              justify-content: flex-start;
+              align-items: center;
+              padding: 0 10px 0 30px;
+
+              .trait-intro {
+                display: none;
+                color: var(--blades-black);
+                margin-right: 5px;
+                line-height: 24px;
+                font-size: 10px;
+                font-weight: bold;
+                margin-top: 3px;
+                text-transform: uppercase;
+              }
+
+              .trait-label {
+                font-family: var(--font-emphasis);
+                color: var(--blades-gold-bright);
+                line-height: 24px;
+                // margin-top: 3px;
+                text-shadow: var(--text-shadow-emboss);
+
+              }
+
+              .dice-roll-strip {
+                height: 24px;
+                width: fit-content;
+                padding: 4px 0px;
+                gap: 3px;
+                margin-left: 5px;
+                background: transparent;
+                box-shadow: none;
+
+                .blades-die {
+                  height: 16px;
+                  border-radius: 3px;
+                  // scale: 1;
+                  // filter: none;
+                  // box-shadow: none;
+                  // outline: none;
+                  // border: none;
+                  // background: transparent;
+
+                  img { height: 16px; width: 16px; filter: none; }
+
+                  &:not(.blades-die-resistance) {
+                    opacity: 0.5;
+                    filter: blur(1px);
+                  }
+                }
+              }
+            }
+
+            .resistance-cost-row {
+              h3 {
+                font-size: 12px;
+                text-shadow: var(--text-shadow-dark-strong);
+              }
+
+              &.cost-bonus {
+                h3 {
+                  color: var(--blades-gold-bright);
+                }
+              }
+              &.cost-stress {
+                h3 {
+                  color: var(--blades-red-bright);
+                }
+              }
+            }
+          }
+        }
+
+        .chat-header.roll-trait {
+          font-size: 14px;
+          color: var(--blades-black);
+
+        }
+
+        .consequence-container.consequence-original {
+
+          .comp.consequence-display-container {
+
+            .consequence-icon-container {
+
+            }
+
+            .consequence-type-container { display: none }
+            .consequence-name-container { display: none }
+
+          }
+
+        }
+        .consequence-container.consequence-resisted { display: none }
+
+
+      }
     }
 
     // .chat-label, .chat-trait-label {
@@ -259,5 +595,9 @@
     // }
 
 
+  }
+
+  .message-content ~ * {
+    z-index: 3;
   }
 }
